# truck-delivery-backend

./: .gitignore  CLAUDE.md  TruckDelivery.slnx  truck-delivery-backend.sln
.claude/: settings.json  settings.local.json
.claude/agents/: notification-service-agent.md  payment-service-agent.md  python-optimizer-agent.md  rust-route-service-agent.md  shipment-service-agent.md  tracking-service-agent.md
.claude/commands/: add-aggregate.md  add-api-endpoint.md  add-domain-event.md  check-arch.md  debug-saga.md  new-command.md  new-kafka-event.md  new-python-service.md  new-query.md  new-rust-service.md  new-saga.md  new-service.md  review-service.md  scaffold-outbox.md
.claude/rules/: 01-architecture-laws.md  02-bounded-contexts.md  03-cqrs-patterns.md  04-event-driven-patterns.md  05-api-patterns.md  06-service-reference.md  07-testing-and-observability.md
.claude/skills/: kaizen.md
.github/workflows/: build-test.yml  docker-publish.yml  e2e.yml  (+2 more)
docker/: .env.example  docker-compose.override.yml  docker-compose.yml
docs/: api-gap-analysis.md  api-reference.md  frontend-integration.md  implementation-roadmap.md  mobile-suggestion.md
src/Services/OCR/truck-delivery-ocr/: .env.example  Dockerfile  pyproject.toml  run.sh  setup.sh
src/Services/OCR/truck-delivery-ocr/src/ocr/: config.py  idempotency.py  main.py  telemetry.py
src/Services/OCR/truck-delivery-ocr/src/ocr/consumers/: driver_documents_consumer.py
src/Services/OCR/truck-delivery-ocr/src/ocr/models/: events.py  request.py  response.py
src/Services/OCR/truck-delivery-ocr/src/ocr/routes/: extract.py  health.py
src/Services/OCR/truck-delivery-ocr/src/ocr/services/: id_card_ocr.py  image_loader.py  license_ocr.py  name_normalizer.py  vehicle_reg_ocr.py  verification.py
src/Services/OCR/truck-delivery-ocr/tests/: test_id_card_ocr.py  test_license_ocr.py  test_name_normalizer.py  test_vehicle_reg_ocr.py  test_verification.py
src/Services/Optimizer/truck-delivery-optimizer/: .env.example  Dockerfile  pyproject.toml  run.ps1  run.sh  setup.ps1  setup.sh
src/Services/Optimizer/truck-delivery-optimizer/src/optimizer/: config.py  main.py  telemetry.py
src/Services/Optimizer/truck-delivery-optimizer/src/optimizer/models/: request.py  response.py
src/Services/Optimizer/truck-delivery-optimizer/src/optimizer/routes/: bin_check.py  health.py  optimize.py
src/Services/Optimizer/truck-delivery-optimizer/src/optimizer/solver/: bin_packing_solver.py  models.py  vrp_solver.py
src/Services/Optimizer/truck-delivery-optimizer/tests/: test_bin_check.py  test_optimize.py
src/Services/Route/truck-delivery-route/: Cargo.toml  Dockerfile  config.toml  run.ps1  run.sh  setup.ps1  setup.sh
src/Services/Route/truck-delivery-route/migrations/: 0001_create_driver_locations.sql  0002_create_road_network.sql
src/Services/Route/truck-delivery-route/src/: cache.rs  config.rs  db.rs  error.rs  main.rs
src/Services/Route/truck-delivery-route/src/domain/: astar.rs  haversine.rs  mod.rs
src/Services/Route/truck-delivery-route/src/handlers/: drivers.rs  health.rs  matrix.rs  mod.rs  route.rs
(+655 files in other folders)
