[project]
name = "truck-delivery-ocr"
version = "0.1.0"
description = "Driver document OCR verification service — PaddleOCR + Vietnamese documents"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "paddlepaddle>=3.0.0",
    "paddleocr>=2.9.1",
    "pillow>=11.0",
    "httpx>=0.27",
    "confluent-kafka>=2.6",
    "opentelemetry-sdk>=1.28",
    "opentelemetry-exporter-otlp>=1.28",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "structlog>=24.4",
    "fuzzywuzzy>=0.18",
    "python-Levenshtein>=0.21",
    "prometheus-client>=0.21",
]

[project.optional-dependencies]
gpu = [
    "paddlepaddle-gpu>=3.0.0",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ocr"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
